<resources>
    <string name="app_name">My App Protfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="this_will_launch">This button will launch my</string>
    <string name="msg_no_movies">No movies found.</string>
    <string name="msg_loading">Loading...</string>
    <string name="title_movie_list_pop">Popular Movies</string>
    <string name="title_movie_list_rate">Top rated Movies</string>
    <string name="title_movie_fav">Favourite Movies</string>
    <string name="action_popular">Most popular</string>
    <string name="action_rated">Top rated</string>
    <string name="action_fav">Favouite</string>
    <string name="lbl_release">Release Date : </string>
    <string name="lbl_rate">Rating :  </string>
    <string name="lbl_rating">10</string>
    <string name="title_details">Movie Details</string>
    <string name="nano_degree">Nanodegree</string>
    <string name="overview">Overview:</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_trailors">Trailors</string>
    <string name="lbl_summery">Summery</string>
    <string name="added_to_fav">Added to Favourite list</string>
    <string name="removed_fav">Removed from favourite list</string>
    <string name="msg_no_reviews">No reviews found</string>
    <string name="ok">OK</string>
    <string name="no_network">No Network</string>
    <string name="no_internet_connection">No Internet connection!\nPlease check your internet connection</string>
    <string name="msg_no_trailers">No trailers</string>
    <string name="error">Error!</string>
    <string name="unable_to_fetch_data">Unable to fetch requested data. Please try again</string>
</resources>
