<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/my_nanodegree_apps"
            android:textSize="25sp" />

        <Button
            android:id="@+id/spotify_button"
            style="@style/showcaseButton"
            android:text="@string/spotify_streamer" />

        <Button
            android:id="@+id/scores_button"
            style="@style/showcaseButton"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/library_button"
            style="@style/showcaseButton"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/build_bigger_button"
            style="@style/showcaseButton"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/xyz_button"
            style="@style/showcaseButton"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/capstone_button"
            style="@style/showcaseMyAppButton"
            android:text="@string/capstone" />

    </LinearLayout>

</ScrollView>
